--- a/trunk/Languages/default-en.xml
+++ b/trunk/Languages/default-en.xml
@@ -2008,7 +2008,7 @@
 		<newline gap="8"/>
 		<text>This is where queues and uploads are displayed. You can expand each queue
 		with the small + on the left, and filter what is displayed with the button on the
-		right on the window toolbar.</text>
+		right of the window's toolbar.</text>
 	</document>
 
 	<!-- General help documents -->
@@ -2086,7 +2086,7 @@
 		up to date server list (met file) to connect to ED2K.</text>
 		<newline gap="8"/>
 		<text>You can download a server list from the ed2k setting page, or the discovery
-		services window.</text>
+		services window. (Press F9 to open the discovery services window)</text> 
 	</document>
 
 	<document name="GeneralHelp.UploadWarning">
