--- a/trunk/Languages/default-nl.xml
+++ b/trunk/Languages/default-nl.xml
@@ -2085,7 +2085,7 @@
 		serverlijst hebben om te kunnen verbinden met ED2K.</text>	
 		<newline gap="8"/>
 		<text>Je kan een serverlijst downloaden van de eDonkey2000 instellingspagina,
-		of op de Discovery Services pagina.</text>
+		of op de Discovery Services pagina. Druk op F9 om het scherm te openen</text>
 	</document>
 
 	<document name="GeneralHelp.UploadWarning">
