--- a/trunk/Languages/default-nl.xml
+++ b/trunk/Languages/default-nl.xml
@@ -16,7 +16,7 @@
 		description="Shareaza Dutch Skin File"
 		link="http://www.shareaza.com/"
 		email="contact@shareaza.com"
-		version="2.1.1.11"
+		version="2.1.2.7"
 		type="Language"
 		language="nl"
 		prompt="Klik hier om Nederlands als taal te selecteren."
@@ -1881,9 +1881,11 @@
 			<link target="raza:command:ID_SEARCH_CHAT" align="middle">Chatten met Gebruiker</link>
 		</group>
 
-		<newline gap="16" indent="0"/>
-		<text format="b">Favouriete Internet Links</text>
-		<newline gap="4" indent="8" id="Bookmarks"/>
+		<group id="3">
+			<newline gap="16" indent="0"/>
+			<text format="b">Favouriete Internet Links</text>
+			<newline gap="4" indent="8" id="Bookmarks"/>
+		</group>
 
 		<newline gap="16" indent="0"/>
 
